--- a/AngularSrc/src/app/components/home/home.component.html
+++ b/AngularSrc/src/app/components/home/home.component.html
@@ -1,3 +1,4 @@
-<p>
-  home works!
-</p>
+<app-landing *ngIf="!authService.loggedIn()"></app-landing>
+<div *ngIf="authService.loggedIn()">
+  user logged in home
+</div>
