--- a/AngularSrc/src/app/components/login/login.component.html
+++ b/AngularSrc/src/app/components/login/login.component.html
@@ -9,4 +9,5 @@
     <input class="form-control" id="user_password" name="name" [(ngModel)]="password">
   </div>
   <input type="submit" class="btn btn-primary" value="Submit">
+  <button type="button" class="btn btn-secondary" [routerLink]="['/']">Cancel</button>
 </form>
