--- a/AngularSrc/src/app/components/register/register.component.html
+++ b/AngularSrc/src/app/components/register/register.component.html
@@ -19,4 +19,5 @@
     </div>
   </div>
   <input type="submit" class="btn btn-primary" value="Submit">
+  <button type="button" class="btn btn-secondary" [routerLink]="['/']">Cancel</button>
 </form>
