--- a/AngularSrc/src/app/components/personal-records/personal-records.component.html
+++ b/AngularSrc/src/app/components/personal-records/personal-records.component.html
@@ -1,6 +1,6 @@
 <div *ngIf="selectedMuscleGroup">
+  <!-- Page Title -->
   <h3 class="text-center">Showing {{selectedMuscleGroup.name}} PRs</h3>
-
   <div class="Records">
     <!-- Exercise -->
     <div class="card mb-3" *ngFor="let exercise of selectedMuscleGroup.exercises; let i = index">
@@ -24,33 +24,9 @@
         <!-- Record Actions -->
         <div class="card-body">
           <a (click)="onExerciseEdit()" href="#" class="card-link">Edit</a>
-          <a (click)="onExerciseUpdate(content)" href="#" class="card-link">Update</a>
+          <a (click)="onExerciseUpdate(exercise)" href="#" class="card-link">Update</a>
         </div>
         <!-- /Record Actions -->
-        <ng-template #content let-c="close" let-d="dismiss">
-          <div class="modal-header">
-            <h4 class="modal-title">{{exercise.name}}</h4>
-            <button type="button" class="close" aria-label="Close" (click)="d('Cross click')">
-              <span aria-hidden="true">&times;</span>
-            </button>
-          </div>
-          <div class="modal-body">
-            <form (submit)="onNewRecordSubmit(exercise); c('Close click')">
-              <div class="form-group">
-                <label for="user_reps_{{i}}">Reps</label>
-                <input [(ngModel)]="newReps" name="new_reps" class="form-control" id="user_reps_{{i}}">
-              </div>
-              <div class="form-group">
-                <label for="user_max_{{i}}">Max</label>
-                <input [(ngModel)]="newMax" name="new_max" class="form-control" id="user_max_{{i}}">
-              </div>
-              <input type="submit" class="btn btn-primary" value="Submit">
-            </form>
-          </div>
-          <div class="modal-footer">
-            <button type="button" class="btn btn-outline-dark" (click)="c('Close click')">Close</button>
-          </div>
-        </ng-template>
 
         <div class="card-footer text-muted">
           Last Updated: 2 days ago
