--- a/AngularSrc/src/app/components/personal-records/personal-records.component.html
+++ b/AngularSrc/src/app/components/personal-records/personal-records.component.html
@@ -24,7 +24,7 @@
         <!-- Record Actions -->
         <div class="card-body">
           <a (click)="onExerciseEdit(i)" href="#" class="card-link">Edit</a>
-          <a (click)="onExerciseUpdate(exercise)" href="#" class="card-link">Update</a>
+          <a (click)="onExerciseUpdate(exercise)" href="#" class="card-link">Add</a>
         </div>
         <!-- /Record Actions -->
 
