--- a/AngularSrc/src/app/components/personal-records/record/record.component.html
+++ b/AngularSrc/src/app/components/personal-records/record/record.component.html
@@ -1,6 +1,7 @@
 <li *ngFor="let pr of exercise.prs" class="list-group-item">
   <div class="d-flex justify-content-between align-items-center">
-    <span>{{pr.reps}} reps</span>
+    <span *ngIf="pr.reps == 1">{{pr.reps}} rep</span>
+    <span *ngIf="pr.reps > 1">{{pr.reps}} reps</span>
     <span class="badge badge-primary badge-pill">{{pr.max}}</span>
   </div>
 </li>
