Added cancel edit

--- a/AngularSrc/src/app/components/personal-records/edit-record/edit-record.component.html
+++ b/AngularSrc/src/app/components/personal-records/edit-record/edit-record.component.html
@@ -16,6 +16,7 @@
     </div>
   </div>
   <div class="text-center my-3">
-    <input type="submit" value="Save" class="btn btn-primary">
+    <input type="submit" value="Save" class="btn btn-primary mr-2">
+    <button (click)="onCancelEdit()" type="button" class="btn btn-outline-secondary">Cancel</button>
   </div>
 </form>
