--- a/AngularSrc/src/app/components/personal-records/edit-record/edit-record.component.html
+++ b/AngularSrc/src/app/components/personal-records/edit-record/edit-record.component.html
@@ -2,11 +2,11 @@
   <div *ngFor="let pr of exercise.prs; let i = index;" class="row">
     <div class="form-group col-5 text-center">
       <label for="user_reps">Reps</label>
-      <input name="reps__{{i}}" [(ngModel)]="pr.reps"  type="text" id="user_reps" class="form-control">
+      <input name="reps__{{i}}" [(ngModel)]="pr.reps"  type="number" id="user_reps" class="form-control">
     </div>
     <div class="form-group col-5 text-center">
       <label for="user_max">Max</label>
-      <input name="max__{{i}}" [(ngModel)]="pr.max" type="text" id="user_max" class="form-control">
+      <input name="max__{{i}}" [(ngModel)]="pr.max" type="number" id="user_max" class="form-control">
     </div>
     <div class="col-2">
       <label class="invisible">Delete</label>
