--- a/AngularSrc/src/app/components/personal-records/personal-records.component.html
+++ b/AngularSrc/src/app/components/personal-records/personal-records.component.html
@@ -7,9 +7,46 @@
   <div class="Records">
     <!-- Exercise -->
     <div class="card mb-3" *ngFor="let exercise of selectedMuscleGroup.exercises; let i = index">
-      <h3 (click)="onExerciseClick(i)"
-          class="card-header Records__exercise-title">{{exercise.name}}
-      </h3>
+
+      <!-- Exercise Card Header -->
+      <div class="card-header d-flex justify-content-between">
+        <!-- Exercise Title -->
+        <h4
+          *ngIf="!isChangeExerciseName"
+          (click)="onExerciseClick(i)"
+          class="Records__exercise-title">{{exercise.name}}
+        </h4>
+        <!-- /Exercise Title -->
+
+        <!-- Change Exercise Name Form -->
+        <form
+          class="d-flex justify-content-between row"
+          *ngIf="isChangeExerciseName"
+          (submit)="onSubmitExerciseNameChange(changedExerciseName, exercise)">
+          <div class="col-12">
+            <label for="user_change_name">Exercise Name</label>
+            <input [value]="exercise.name" #changedExerciseName type="text" class="form-control mr-2" id="user_change_name">
+          </div>
+          <div class="col-12 mt-2">
+            <input type="submit" class="btn btn-primary" value="Submit">
+            <button (click)="isChangeExerciseName = false" type="button" class="btn btn-secondary">Cancel</button>
+          </div>
+        </form>
+        <!-- /Change Exercise Name Form -->
+
+        <!-- Exercise Options Dropdown -->
+        <div *ngIf="!isChangeExerciseName" ngbDropdown placement="bottom-right" class="align-self-center Records__exercise-options">
+          <span ngbDropdownToggle><i class="fas fa-ellipsis-v fa-lg"></i></span>
+          <div ngbDropdownMenu>
+            <button (click)="onChangeExerciseNameClick()" class="dropdown-item">Change Exercise Name</button>
+            <button class="dropdown-item">Delete Exercise</button>
+          </div>
+        </div>
+        <!-- /Exercise Options Dropdown -->
+
+      </div>
+      <!-- /Exercise Card Header -->
+
       <div [ngbCollapse]="!isDesktop && selectedExercise !== i">
 
         <!-- Record List -->
@@ -29,9 +66,9 @@
           <a (click)="onExerciseEdit(i)" href="#" class="card-link">Edit</a>
           <a (click)="onExerciseUpdate(exercise)" href="#" class="card-link">Add</a>
           <!-- Sort Dropdown -->
-          <div ngbDropdown class="d-inline-block float-right">
-            <button class="btn btn-link" id="dropdownBasic1" ngbDropdownToggle>Sort By</button>
-            <div ngbDropdownMenu aria-labelledby="dropdownBasic1">
+          <div ngbDropdown placement="bottom-right" class="d-inline-block float-right">
+            <button class="btn btn-link Records__sort-by-btn" ngbDropdownToggle>Sort By</button>
+            <div ngbDropdownMenu>
               <button (click)="onSortClick($event, exercise)" class="dropdown-item">Max</button>
               <button (click)="onSortClick($event, exercise)" class="dropdown-item">Reps</button>
             </div>
