Refactored personal-record service

--- a/AngularSrc/src/app/components/personal-records/edit-record/edit-record.component.html
+++ b/AngularSrc/src/app/components/personal-records/edit-record/edit-record.component.html
@@ -17,6 +17,6 @@
   </div>
   <div class="text-center my-3">
     <input type="submit" value="Save" class="btn btn-primary mr-2">
-    <button (click)="onCancelEdit()" type="button" class="btn btn-outline-secondary">Cancel</button>
+    <button (click)="cancelEdit()" type="button" class="btn btn-outline-secondary">Cancel</button>
   </div>
 </form>
