--- a/AngularSrc/src/app/components/personal-records/dropdowns/exercise-options/exercise-options.component.html
+++ b/AngularSrc/src/app/components/personal-records/dropdowns/exercise-options/exercise-options.component.html
@@ -1,5 +1,5 @@
 <!-- Exercise Options Dropdown -->
-<div class="Options" *ngIf="!prService.isChangeExerciseName || selectedExercise !== i" ngbDropdown placement="bottom-right" class="align-self-center Records__exercise-options">
+<div class="Options" ngbDropdown placement="bottom-right" class="align-self-center Records__exercise-options">
   <span ngbDropdownToggle class="Options__icon"><i class="fas fa-ellipsis-v fa-lg"></i></span>
   <div ngbDropdownMenu>
     <button (click)="onChangeExerciseNameClick()" class="dropdown-item">Change Exercise Name</button>
