--- a/AngularSrc/src/app/components/personal-records/personal-records.component.html
+++ b/AngularSrc/src/app/components/personal-records/personal-records.component.html
@@ -1,9 +1,16 @@
 <div *ngIf="selectedMuscleGroup">
   <!-- Page Title -->
   <h3 class="text-center">Showing {{selectedMuscleGroup.name}} PRs</h3>
-  <div class="text-center">
-    <button (click)="onAddExerciseClick()" type="button" class="btn btn-outline-info my-2">{{addExerciseBtnText}}</button>
+  <div class="text-center" *ngIf="!prService.isAddExercise">
+    <button (click)="onAddExerciseClick()" type="button" class="btn btn-outline-info my-3">{{addExerciseBtnText}}</button>
   </div>
+
+  <!-- Add Exercise Card -->
+  <ng-container *ngIf="prService.isAddExercise">
+    <app-add-exercise [muscleGroupName]="selectedMuscleGroup.name"></app-add-exercise>
+  </ng-container>
+  <!-- /Add Exercise Card -->
+
   <div class="Records">
     <!-- Exercise -->
     <div class="card mb-3" *ngFor="let exercise of selectedMuscleGroup.exercises; let i = index">
@@ -61,7 +68,6 @@
       </div>
     </div>
     <!-- /Exercise -->
-    <app-add-exercise *ngIf="isAddExercise" [muscleGroupName]="selectedMuscleGroup.name"></app-add-exercise>
 
   </div>
 
