--- a/AngularSrc/src/app/components/login/login.component.html
+++ b/AngularSrc/src/app/components/login/login.component.html
@@ -6,7 +6,7 @@
   </div>
   <div class="form-group">
     <label for="user_password">Password</label>
-    <input class="form-control" id="user_password" name="name" [(ngModel)]="password">
+    <input type="password" class="form-control" id="user_password" name="name" [(ngModel)]="password">
   </div>
   <input type="submit" class="btn btn-primary" value="Submit">
   <button type="button" class="btn btn-secondary" [routerLink]="['/']">Cancel</button>
